--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     "marked": "https://aistudiocdn.com/marked@^16.4.1",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
+    "vite": "https://aistudiocdn.com/vite@^7.1.12",
+    "process": "https://aistudiocdn.com/process@^0.11.10"
   }
 }
 </script>
