--- a/index.html
+++ b/index.html
@@ -177,6 +177,39 @@
         animation: typing-wave 2s infinite ease-in-out;
     }
 
+    /* Synthetic Reality Field Visualizer */
+    .bg-radial-srf {
+        background-image: radial-gradient(circle, rgba(168, 85, 247, 0.4) 0%, rgba(168, 85, 247, 0) 60%);
+    }
+    @keyframes srf-pulse {
+        0% { transform: scale(0.95); box-shadow: 0 0 0 0 rgba(168, 85, 247, 0.7); }
+        70% { transform: scale(1); box-shadow: 0 0 10px 20px rgba(168, 85, 247, 0); }
+        100% { transform: scale(0.95); box-shadow: 0 0 0 0 rgba(168, 85, 247, 0); }
+    }
+    .animate-srf-pulse {
+        animation: srf-pulse 3s infinite ease-in-out;
+    }
+    @keyframes srf-orbit {
+        from { transform: rotate(0deg) translateX(70px) rotate(0deg); }
+        to   { transform: rotate(360deg) translateX(70px) rotate(-360deg); }
+    }
+    .animate-srf-orbit {
+        animation: srf-orbit linear infinite;
+    }
+
+    /* Temporal Consciousness Visualizer */
+    @keyframes temporal-spin {
+        from { transform: rotate(0deg); }
+        to   { transform: rotate(360deg); }
+    }
+    @keyframes temporal-pulse {
+      0%, 100% { opacity: 0.8; transform: scale(1); }
+      50% { opacity: 1; transform: scale(1.05); }
+    }
+    .dashed-circle {
+        stroke-dasharray: 4, 4;
+    }
+
 </style>
 </head>
 <body class="bg-gray-950 text-white">
